[gd_scene load_steps=3 format=3 uid="uid://br7yxkqv0x8hy"]

[ext_resource type="Script" path="res://scripts/ui/components/TutorialDialog.gd" id="1_0a1mq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a2b3c"]
bg_color = Color(0.2, 0.2, 0.3, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.84, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TutorialDialog" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0a1mq")

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 160.0
offset_right = 940.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a2b3c")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
text = "Tutorial"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Tutorial message goes here..."
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
text = "Continue"
